crimson/manifests/ns-ingress-controller/nginx-ingress/resources/ingress-auth.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-auth
subsets:
  - addresses:
      - ip: 10.0.108.10
    ports:
      - port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: external-auth
spec:
  ports:
    - port: 443
      targetPort: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-auth
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: auth.vrsf.in
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: external-auth
                port:
                  number: 443
  tls:
    - hosts:
        - auth.vrsf.in
      secretName: external-auth-tls
