crimson/manifests/ns-ingress-controller/nginx-ingress/resources/ingress-authentik.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-authentik
subsets:
  - addresses:
      - ip: 10.0.20.30
    ports:
      - port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: external-authentik
spec:
  ports:
    - port: 443
      targetPort: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-authentik
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: auth.vrsf.in
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: external-authentik
                port:
                  number: 443
  tls:
    - hosts:
        - auth.vrsf.in
      secretName: external-authentik-tls
