crimson/manifests/ns-ingress-controller/nginx-ingress/resources/ingress-consul.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-consul
subsets:
  - addresses:
      - ip: 10.0.30.11
    ports:
      - port: 8500
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-consul-dns
subsets:
  - addresses:
      - ip: 10.0.30.11
    ports:
      - port: 8600
---
apiVersion: v1
kind: Service
metadata:
  name: external-consul
spec:
  ports:
    - name: ui
      port: 443
      targetPort: 8500
    - name: dns
      port: 53
      targetPort: 8600
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-consul
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: consul.vrsf.in
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: external-consul
                port:
                  number: 443
    - host: dns.consul.vrsf.in
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: external-consul-dns
                port:
                  number: 53
  tls:
    - hosts:
        - consul.vrsf.in
        - dns.consul.vrsf.in
      secretName: external-consul-tls
